# kfix

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHEATSHEET.md  CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md  MONETIZATION.md  Makefile  README.md  STATUS.md  TESTING.md  coverage.xml  kfix.sh  pyproject.toml
.github/workflows/: release.yml  test.yml
Formula/: kfix.rb
examples/: README.md  broken-deployment.yaml  broken-pod.yaml  broken-service.yaml  crashloop-pod.yaml  demo-crash.yaml  oom-pod.yaml  test-pod.yaml
kfix/: __init__.py  ai.py  cli.py  config.py  kubectl.py
tests/: __init__.py  conftest.py  test_ai.py  test_cli.py  test_config.py  test_kubectl.py
